--- a/translations/fr.json
+++ b/translations/fr.json
@@ -7,17 +7,18 @@
     "sectionFinancement": "Financement",
     "prix": "Prix du bien (€):",
     "notaire": "Frais de notaire (%):",
-    "tauxAppreciation": "Taux appréciation bien (%):",
+    "tauxAppreciation": "Taux d'appréciation du bien (%):",
     "commission": "Commission agence (%):",
     "apport": "Apport personnel (€):",
     "taux": "Taux d'intérêt (%):",
     "dureePret": "Durée du prêt (années):",
     "loyerFictif": "Loyer fictif mensuel (€):",
-    "tauxLoyerFictif": "Taux évolution loyer fictif annuel (%):",
+    "tauxLoyerFictif": "Taux d'évolution loyer fictif annuel (%):",
     "taxeHabitation": "Taxe d'habitation (€):",
     "taxeFonciere": "Taxe foncière (€):",
     "generateReport": "Calculer",
     "pdfFilename": "Nom du fichier PDF:",
+    "pdfFilenamePlaceHolder": "rapport-immobilier.pdf",
     "downloadPDF": "Télécharger le rapport en PDF",
     "helpPrix": "Le prix d'achat du bien immobilier.",
     "helpNotaire": "Pourcentage des frais de notaire applicables (4 pour du neuf, 8 pour de l'ancien).",
@@ -45,7 +46,7 @@
     "reportMontantEmprunte": "Montant emprunté",
     "reportTauxInteret": "Taux d'intérêt",
     "reportMensualite": "Mensualité",
-    "reportInteretsTotaux": "Intérêts totaux",
+    "reportInteretsTotaux": "Total intérêts",
     "reportCoutTotalEmprunt": "Coût total emprunt",
     "reportLoyerFictifMensuel": "Loyer fictif mensuel",
     "reportTauxEvolutionLoyerFictif": "Taux d'évolution du loyer fictif",
