add borrower insurance

--- a/translations/en.json
+++ b/translations/en.json
@@ -15,6 +15,7 @@
     "commission": "Agency commission (%):",
     "apport": "Personal contribution (€):",
     "taux": "Interest rate (%):",
+    "tauxAssurance": "Borrower insurance (%):",
     "dureePret": "Loan duration (years):",
     "loyerFictif": "Monthly fictitious rent (€):",
     "tauxLoyerFictif": "Annual fictitious rent increase rate (%):",
@@ -24,6 +25,7 @@
     "pdfFilename": "PDF file name:",
     "pdfFilenamePlaceHolder": "real-estate-simulation.pdf",
     "downloadPDF": "Download PDF Report",
+    "helpTauxAssurance": "Pourcentage of the loan; the loan cover insurance.",
     "helpPrix": "The purchase price of the real estate property.",
     "helpNotaire": "Percentage of applicable notary fees (4 for new, 8 for old).",
     "helpTauxAppreciation": "Annual appreciation rate of the property price.",
