--- a/translations/fr.json
+++ b/translations/fr.json
@@ -15,6 +15,7 @@
     "commission": "Commission agence (%):",
     "apport": "Apport personnel (€):",
     "taux": "Taux d'intérêt (%):",
+    "tauxAssurance": "Assurance emprunteur (%):",
     "dureePret": "Durée du prêt (années):",
     "loyerFictif": "Loyer fictif mensuel (€):",
     "tauxLoyerFictif": "Taux d'évolution loyer fictif annuel (%):",
@@ -25,6 +26,7 @@
     "pdfFilenamePlaceHolder": "rapport-immobilier.pdf",
     "downloadPDF": "Télécharger le rapport en PDF",
     "helpPrix": "Le prix d'achat du bien immobilier.",
+    "helpTauxAssurance": "Pourcentage du prêt, elle garantit le prêt immobilier.",
     "helpNotaire": "Pourcentage des frais de notaire applicables (4 pour du neuf, 8 pour de l'ancien).",
     "helpTauxAppreciation": "Taux d'évolution annuel du prix du bien.",
     "helpCommission": "Pourcentage des frais d'agence.",
