added taux-assurance in form and handlers; TODO : make sure it is used in calculations

--- a/translations/en.json
+++ b/translations/en.json
@@ -1,65 +1,67 @@
 {
     "annee": "Year",
-    "welcomeMessage": "Welcome!<br /><br />This tool is a real estate investment calculator to determine when it becomes profitable to buy a property rather than rent it.",
+    "apport": "Personal contribution (€):",
     "closeButton": "Close",
-    "Title": "Calculette Projet Immobilier",
-    "sectionTitle": "Real Estate Project Calculator",
+    "commission": "Agency commission (%):",
+    "copropriete": "Co-ownership fees",
+    "downloadPDF": "Download PDF Report",
+    "dureePret": "Loan duration (years):",
+    "generateReport": "Calculate",
+    "helpApport": "Amount of personal contribution.",
+    "helpCommission": "Percentage of agency fees.",
+    "helpCopropriete": "Possible annual co-ownership fees; for example 1200 €",
+    "helpDureeLocation": "Average rental duration (% of year)",
+    "helpDureePret": "Total duration of the loan in years.",
+    "helpLoyerFictif": "Monthly rent you would pay if you rented instead of buying.",
+    "helpLoyerMensuel": "Monthly rent gain (€)",
+    "helpNotaire": "Percentage of applicable notary fees (4 for new, 8 for old).",
+    "helpPrix": "The purchase price of the real estate property.",
+    "helpTaux": "Annual interest rate of the real estate loan.",
+    "helpTauxAppreciation": "Annual appreciation rate of the property price.",
+    "helpTauxAssurance": "Pourcentage of the loan; the loan cover insurance.",
+    "helpTauxLoyerFictif": "Annual increase rate of the fictitious rent if you rented instead of buying (%).",
+    "helpTaxeFonciere": "Annual amount of the property tax.",
+    "helpTaxeHabitation": "Annual amount of the housing tax.",
+    "loyerFictif": "Monthly fictitious rent (€):",
+    "notaire": "Notary fees (%):",
+    "pdfFileName": "PDF file name:",
+    "pdfFileNamePlaceHolder": "real-estate-simulation.pdf",
+    "prix": "Property price (€):",
+    "reportAchat": "Purchase",
+    "reportAmortissement": "Amortization",
+    "reportAnneeRemboursement": "Purchase amortized from year",
+    "reportCommission": "Agency commission",
+    "reportCopropriete": "Annual trustee fees",
+    "reportCoutTotalEmprunt": "Total loan cost",
+    "reportCumulDepensesAchat": "Cumulative expenses in purchase",
+    "reportCumulDepensesLocation": "Cumulative expenses in rent",
+    "reportEmprunt": "Loan",
+    "reportFinancement": "Financing",
+    "reportFraisNotaire": "Notary fees",
+    "reportInteretsTotaux": "Total interest",
+    "reportLoyerFictifMensuel": "Monthly fictitious rent",
+    "reportLoyerMoyenTouche": "Average monthly rent received",
+    "reportMensualite": "Monthly payment",
+    "reportMontantEmprunte": "Amount borrowed",
+    "reportPrix": "Price of the bare property",
+    "reportTauxAppreciation": "Annual price appreciation rate",
+    "reportTauxAssurance": "Borrower insurance rate",
+    "reportTauxEvolutionLoyerFictif": "Annual fictitious rent increase rate",
+    "reportTauxInteret": "Interest rate",
+    "reportTaxeFonciereAnnuelle": "Annual property tax",
+    "reportTaxeHabitationAnnuelle": "Annual housing tax",
+    "reportTitle": "Real Estate Project Simulation Report",
+    "reportTotalAchat": "Total purchase",
     "sectionAchat": "Purchase",
     "sectionEmprunt": "Loan",
     "sectionFinancement": "Financing",
-    "prix": "Property price (€):",
-    "notaire": "Notary fees (%):",
+    "sectionTitle": "Real Estate Project Calculator",
     "tauxAppreciation": "Property appreciation rate (%):",
-    "copropriete": "Co-ownership fees",
-    "helpCopropriete": "Possible annual co-ownership fees; for example 1200 €",
-    "commission": "Agency commission (%):",
-    "apport": "Personal contribution (€):",
-    "taux": "Interest rate (%):",
     "tauxAssurance": "Borrower insurance (%):",
-    "dureePret": "Loan duration (years):",
-    "loyerFictif": "Monthly fictitious rent (€):",
+    "tauxInteret": "Interest rate (%):",
     "tauxLoyerFictif": "Annual fictitious rent increase rate (%):",
-    "taxeHabitation": "Housing tax (€):",
     "taxeFonciere": "Property tax (€):",
-    "generateReport": "Calculate",
-    "pdfFilename": "PDF file name:",
-    "pdfFilenamePlaceHolder": "real-estate-simulation.pdf",
-    "downloadPDF": "Download PDF Report",
-    "helpTauxAssurance": "Pourcentage of the loan; the loan cover insurance.",
-    "helpPrix": "The purchase price of the real estate property.",
-    "helpNotaire": "Percentage of applicable notary fees (4 for new, 8 for old).",
-    "helpTauxAppreciation": "Annual appreciation rate of the property price.",
-    "helpCommission": "Percentage of agency fees.",
-    "helpApport": "Amount of personal contribution.",
-    "helpTaux": "Annual interest rate of the real estate loan.",
-    "helpDureePret": "Total duration of the loan in years.",
-    "helpLoyerFictif": "Monthly rent you would pay if you rented instead of buying.",
-    "helpTauxLoyerFictif": "Annual increase rate of the fictitious rent if you rented instead of buying (%).",
-    "helpTaxeHabitation": "Annual amount of the housing tax.",
-    "helpTaxeFonciere": "Annual amount of the property tax.",
-    "helpLoyerMensuel": "Monthly rent (€)",
-    "helpDureeLocation": "Duration (% of the year)",
-    "reportTitle": "Real Estate Project Simulation Report",
-    "reportAchat": "Purchase",
-    "reportEmprunt": "Loan",
-    "reportFinancement": "Financing",
-    "reportAmortissement": "Amortization",
-    "reportPrix": "Property price",
-    "reportFraisNotaire": "Notary fees",
-    "reportTauxAppreciation": "Appreciation rate",
-    "reportCommission": "Agency commission",
-    "reportTotalAchat": "Total purchase",
-    "reportMontantEmprunte": "Amount borrowed",
-    "reportTauxInteret": "Interest rate",
-    "reportMensualite": "Monthly payment",
-    "reportInteretsTotaux": "Total interest",
-    "reportCoutTotalEmprunt": "Total loan cost",
-    "reportLoyerFictifMensuel": "Monthly fictitious rent",
-    "reportTauxEvolutionLoyerFictif": "Annual fictitious rent increase rate",
-    "reportTaxeHabitationAnnuelle": "Annual housing tax",
-    "reportTaxeFonciereAnnuelle": "Annual property tax",
-    "reportLoyerMoyenTouche": "Average monthly rent received",
-    "reportAnneeRemboursement": "Purchase amortized from year",
-    "reportCumulDepensesLocation": "Cumulative expenses in rent",
-    "reportCumulDepensesAchat": "Cumulative expenses in purchase"
+    "taxeHabitation": "Housing tax (€):",
+    "Title": "Calculette Projet Immobilier",
+    "welcomeMessage": "Welcome!<br /><br />This tool is a real estate investment calculator to determine when it becomes profitable to buy a property rather than rent it."
 }
